# sothis

./: pyproject.toml
src/: sample.py  sample_note.ipynb  streamlit_main.py  streamlit_main2.py
src/langgraph/: LGquickstart.ipynb  blog_reviewer.ipynb
src/llamaindex/: basic_introduction.ipynb
